Added classes to load all 5 CSV file types.

--- a/Andy/LoadCsv/LoadCsv.csproj
+++ b/Andy/LoadCsv/LoadCsv.csproj
@@ -42,9 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnalysis.cs" />
     <Compile Include="DataFacturation.cs" />
     <Compile Include="DataPaiements.cs" />
     <Compile Include="DataPerformance.cs" />
+    <Compile Include="DataSolution.cs" />
+    <Compile Include="DataTransactions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
