Finished training pipeline; Using ML.Net's framework

--- a/Andy/Utilities/Util.Json/Util.Json.csproj
+++ b/Andy/Utilities/Util.Json/Util.Json.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="uBin.cs" />
     <Compile Include="uJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
