--- a/Andy/LoadCsv/LoadCsv.csproj
+++ b/Andy/LoadCsv/LoadCsv.csproj
@@ -24,6 +24,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>..\</OutputPath>
@@ -114,7 +115,9 @@
     <Compile Include="NnRow.cs" />
     <Compile Include="MLNetData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatsD.cs" />
     <Compile Include="uMath.cs" />
+    <Compile Include="uStats.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
